# AI-Associate

./: .gitignore  .mcp.json  README.md
.claude-plugin/: plugin.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-behavioral-foundation/: 01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/01-formatting-preserving-redline-pipeline/: 01-01-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: contract-reviser.md  document-drafter.md  document-reviewer.md  legal-researcher.md
commands/: docx-mode.md  sara.md
docs/plans/: 2026-02-14-docx-tools-design.md  2026-02-14-docx-tools-implementation.md
docx-tools/: mcp_server.py  pyproject.toml  requirements.txt
docx-tools/cli/: analyze.py  compare.py  extract.py  gen_calendar.py  read.py  redline.py  write.py
docx-tools/core/: __init__.py  analyzer.py  calendar_writer.py  comparer.py  extractor.py  inserter.py  reader.py  redliner.py  scanner.py  writer.py
docx-tools/tests/: test_analyzer.py  test_comparer.py  test_extractor.py  test_inserter.py  test_reader.py  test_rebuild_docx.py  test_redliner.py  test_scanner.py  test_writer.py
skills/sara/: SKILL.md
skills/sara-associate/: SKILL.md
temp/: generate_playbook_index.py  rebuild_docx.py  test_rebuild_insert.py
(+65 files in other folders)
